force-app/main/default/objects/BillingOperation__c/BillingOperation__c.object-meta.xml
<CustomObject>
    <label>Billing Operation</label>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>Operation Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Billing Operations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>