force-app/main/default/objects/BillingOperation__c/fields/Action__c.field-meta.xml
<CustomField>
    <fullName>Action__c</fullName>
    <label>Action</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AJOUT</fullName>
            </value>
            <value>
                <fullName>SUPPRESSION</fullName>
            </value>
            <value>
                <fullName>MODIFICATION</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>