force-app/main/default/objects/BillingOperation__c/fields/AmendZID__c.field-meta.xml
<CustomField>
    <fullName>AmendZID__c</fullName>
    <label>AmendZID</label>
    <length>32</length>
    <type>Text</type>
</CustomField>