force-app/main/default/objects/BillingOperation__c/fields/DateOperation__c.field-meta.xml
<CustomField>
    <fullName>DateOperation__c</fullName>
    <label>Date Operation</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>