force-app/main/default/objects/BillingOperation__c/fields/Operation__c.field-meta.xml
<CustomField>
    <fullName>Operation__c</fullName>
    <label>Operation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Souscription</fullName>
            </value>
            <value>
                <fullName>Migration</fullName>
            </value>
            <value>
                <fullName>Renouvellement</fullName>
            </value>
            <value>
                <fullName>Desabonnement</fullName>
            </value>
            <value>
                <fullName>Resiliation</fullName>
            </value>
            <value>
                <fullName>Retractation</fullName>
            </value>
            <value>
                <fullName>FinContrat</fullName>
            </value>
            <value>
                <fullName>PassageU26</fullName>
            </value>
            <value>
                <fullName>Reactivation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>