force-app/main/default/objects/BillingOperation__c/fields/SousType__c.field-meta.xml
<CustomField>
    <fullName>SousType__c</fullName>
    <label>Sous Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>AUCUN</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>