force-app/main/default/objects/BillingOperation__c/fields/SubscriptionName__c.field-meta.xml
<CustomField>
    <fullName>SubscriptionName__c</fullName>
    <label>SubscriptionName</label>
    <length>32</length>
    <type>Text</type>
</CustomField>