force-app/main/default/objects/BillingOperation__c/fields/Zoperation__c.field-meta.xml
<CustomField>
    <fullName>Zoperation__c</fullName>
    <description>zuora operation</description>
    <label>Zoperation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Subscribe</fullName>
            </value>
            <value>
                <fullName>Cancel</fullName>
            </value>
            <value>
                <fullName>Amend</fullName>
            </value>
            <value>
                <fullName>DeleteCancel</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>